--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,23 @@
   font-family: 'Kaushan Script','Helvetica Neue',Helvetica,Arial,cursive;
   color: #fed136;
 }
+
+
+section#contact {
+  background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url("../img/contact.png");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+header.masthead {
+  text-align: center;
+  color: white;
+  background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url("../img/header.jpg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
