Changed logo size

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 #mainNav .navbar-brand {
     font-family: 'Gugi', 'Helvetica Neue',Helvetica,Arial,cursive;
+    font-size: 23px;
 }
 
 .header-brand {
